feat: Implement Global Telegram Chat ID Security Filter

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # --- TELEGRAM SETTINGS ---
 # Get these from @BotFather and @userinfobot
 TELEGRAM_BOT_TOKEN=
+# SECURITY: Only this Chat ID will be allowed to send commands
 TELEGRAM_CHAT_ID=
 TELEGRAM_SIGNAL_CHANNEL_ID=
 
